code blocks: Fix double border in Github.

--- a/css/site.css
+++ b/css/site.css
@@ -336,7 +336,5 @@ svg > text {
 }
 
 div.highlight {
-    border: thin solid black;
-    padding: 0 10px;
     overflow-x: auto;
 }
